Updating the website for school

--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,8 @@
 						</ul><hr class="list">
 						<ul>
 							<li><a href="http://www.maciej01.tech/template.html">Template</a></li>
-							<li><a href="http://ts3.maciej01.tech/index.html">TS3 guide</a></li>
-							<li><a href="http://szkola.maciej01.tech/index.html">Szkoła</a></li>
+							<li><a href="http://www.maciej01.tech/ts3/index.html">TS3 guide</a></li>
+							<li><a href="http://www.maciej01.tech/szkola/index.html">Szkoła</a></li>
 						</ul>
 					</div>
 				</div>
@@ -43,7 +43,7 @@
 						<p>
 							There isn't too much to say, really. I'm gonna list methods of contact, in order of preference:</br>
 							1. <a href="http://steamcommunity.com/id/maciej01">Steam</a> - the fastest way to do it.</br>
-							2. <a href="mailto:maciej.kaszkowiak@gmail.com">Email</a> - I check it less often.</br>
+							2. <a href="mailto:maciej.kaszkowiak@gmail.com">Email</a> - I check it daily.</br>
 							3. <a href="https://www.facebook.com/maciej.asdfowski">Facebook</a>.</br>
 						</p>
 					</div>
