--- a/ts3/index.html
+++ b/ts3/index.html
@@ -28,6 +28,9 @@
 						<h1>
 							Jak zainstalować i używać?
 						</h1>
+						</br><h1>
+							Ważne - ts3.maciej01.tech obecnie nie działa.
+						</h1>
 						</br><hr>
 						<p>
 							TeamSpeak to program służący do komunikacji grupowej, głównie głosowej. Jest kompletnie darmowy i stosowany przez miliony osób na świecie.</br>
