--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 						</ul><hr class="list">
 						<ul>
 							<li><a href="http://www.maciej01.tech/template.html">Template</a></li>
-							<li><a href="http://ts3.maciej01.tech/index.html">TS3 guide</a></li>
-							<li><a href="http://szkola.maciej01.tech/index.html">Szkoła</a></li>
+							<li><a href="http://www.maciej01.tech/ts3/index.html">TS3 guide</a></li>
+							<li><a href="http://www.maciej01.tech/szkola/index.html">Szkoła</a></li>
 						</ul>
 					</div>
 				</div>
@@ -42,14 +42,14 @@
 						</h1>
 						</br><hr>
 						<p>
-							Hey, <b>maciej01</b> here. I'm a 14 year old guy living in Wronki, Poland. I decided to create this website from boredom, using it in order to practice my HTML and CSS skills. On the left, there's a navigation column (in retrospect, I should have used a navigation bar, but let's skip that), which you can use to navigate through the website. There's also a TS3 server on the same address (please note, I'm not exactly the main owner of it - I use TS3 only from time to time, so a friend of mine almost fully controls it. He also purchased the VPS).
+							Hey, <b>maciej01</b> here. I'm a 14 year old guy living in Wronki, Poland. I decided to create this website from boredom, using it in order to practice my HTML and CSS skills. On the left, there's a navigation column, which you can use to navigate through the website. There's also a TS3 server on the same address (please note, I'm not exactly the main owner of it - I use TS3 only from time to time, so a friend of mine almost fully controls it. He also purchased the VPS).
 						</p>
 						<p>
 							What more can I say? I'm an avid gamer, I have 3441 hours of playtime on Steam at the time of writing, 20th Feb 2016. That's excluding non-steam games like osu! where I likely have over 400 hours, and Minecraft with potentially over 1000, as well as flash games and pirated copies. Here's a link to my <a href="http://steamcommunity.com/id/maciej01">Steam</a>, it's one of most failproof methods used to contact me as I'm on it almost daily.</br>
 							I'm also a fairly newbie programmer, knowledgable in Python and GML (Game Maker Language), with past experiences in various languages, mostly C++. Although most of my projects don't end up being uploaded anywhere, there's a link to both my <a href="https://github.com/asdfMaciej">Github</a> and <a href="https://bitbucket.org/maciej01/">Bitbucket</a>.
 						</p>
 						<p>
-							If you really want to contact me, hit me up on <a href="http://steamcommunity.com/id/maciej01">Steam</a> - the fastest way to do it - or send me an <a href="mailto:maciej.kaszkowiak@gmail.com">e-mail</a>, which I check less often.
+							If you really want to contact me, hit me up on <a href="http://steamcommunity.com/id/maciej01">Steam</a> - the fastest way to do it - or send me an <a href="mailto:maciej.kaszkowiak@gmail.com">e-mail</a>, which I check daily.
 						</p>
 					</div>
 				</div>
