--- a/szkola/index.html
+++ b/szkola/index.html
@@ -30,8 +30,8 @@
 						</ul><hr class="list">
 						<ul>
 							<li><a href="http://www.maciej01.tech/template.html">Template</a></li>
-							<li><a href="http://ts3.maciej01.tech/index.html">TS3 guide</a></li>
-							<li><a href="http://szkola.maciej01.tech/index.html" id="active">Szkoła</a></li>
+							<li><a href="http://www.maciej01.tech/ts3/index.html">TS3 guide</a></li>
+							<li><a href="http://www.maciej01.tech/szkola/index.html" id="active">Szkoła</a></li>
 						</ul>
 					</div>
 				</div>
@@ -42,15 +42,8 @@
 						</h1>
 						</br><hr>
 						<p>
-							Postawiłem to jako dowód, że zrobiłem tą stronę. Reszta jest po angielsku. Cały HTML/CSS pisany ręcznie, bez użycia żadnego boilerplate. Na lewo jest pasek nawigacji. Na serwerze jest jeszcze kilka subdomen: </br>
-							<a href="http://ts3.maciej01.tech">ts3.maciej01.tech</a></br>
-							<a href="http://appek.maciej01.tech">appek.maciej01.tech</a></br>
-							No i oczywiście:
-							<a href="http://szkola.maciej01.tech">szkola.maciej01.tech</a></br>
-							I główna:
-							<a href="http://www.maciej01.tech">www.maciej01.tech</a></br>
-							Stronka może się sypać pod IE. Hostowana na tanim VPS (za miesiąc przerzucimy się na lepszą ofertę, zdobyłem rabat od znajomego na inny), domena wykupiona za dolara na jeden rok.</br>
-							Współtworzona z Mateuszem Duksem (2f), z czego częścią strony zająłem bardziej się ja, natomiast on zajął się konfiguracją serwera ts3.
+							Postawiłem to jako dowód, że zrobiłem tą stronę. Reszta jest po angielsku. Cały HTML/CSS pisany ręcznie, bez użycia żadnego boilerplate. Na lewo jest pasek nawigacji.
+							Stronka może się sypać pod IE. Hostowana na pages.github.com, domena wykupiona z namecheap.</br>
 						</p>
 					</div>
 				</div>
