--- a/template.html
+++ b/template.html
@@ -29,8 +29,8 @@
 						</ul><hr class="list">
 						<ul>
 							<li><a href="http://www.maciej01.tech/template.html" id="active">Template</a></li>
-							<li><a href="http://ts3.maciej01.tech/index.html">TS3 guide</a></li>
-							<li><a href="http://szkola.maciej01.tech/index.html">Szkoła</a></li>
+							<li><a href="http://www.maciej01.tech/ts3/index.html">TS3 guide</a></li>
+							<li><a href="http://www.maciej01.tech/szkola/index.html">Szkoła</a></li>
 						</ul>
 					</div>
 				</div>
